fixed z-index

--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -23,7 +23,6 @@ p.purple {
 
 h {
     font-size: 30px;
-    font-family: serif;
 }
 
 h2 {
@@ -56,7 +55,7 @@ hr {
     width: 300px;
     left: 600px;
     color: black;
-    z-index: 10;
+    z-index: -10;
     border: solid 1px white;
     top: 900px;
 }
